--- a/new-age.html
+++ b/new-age.html
@@ -132,6 +132,7 @@
       </a>
 
       <button
+      title="Main Menu"
         class="navbar-toggler"
         type="button"
         data-bs-toggle="collapse"
